fix truncated code blocks

--- a/lectures/reveal.js/theme/ttw.css
+++ b/lectures/reveal.js/theme/ttw.css
@@ -298,7 +298,7 @@ figcaption {
   display: block;
   padding: 5px;
   overflow: auto;
-  max-height: 400px;
+  max-height: 800px;
   word-wrap: normal; }
 
 .reveal table {
